# ros2_kortex_ws

./: .gitignore  GRIPPER_ANALYSIS.md  README.md  control_feedback_report.md  joint_states_sample.txt  pick_place_project_proposal.md  ros_nodes.txt  ros_nodes_info.txt  ros_services.txt  ros_services_types.txt  ros_topics.txt  ros_topics_info.txt  test_fk_complete.py  test_fk_symbolic.py
src/generate_parameter_library/example/: README.md
src/gz_ros2_control/: .pre-commit-config.yaml  README.md  gz_ros2_control.humble.repos  gz_ros2_control.jazzy.repos  gz_ros2_control.kilted.repos  gz_ros2_control.rolling.repos
src/gz_ros2_control/.github/workflows/: ci-humble.yaml  ci-jazzy.yaml  ci-kilted.yaml  ci-rolling.yaml  humble-check-docs.yml  jazzy-check-docs.yml  kilted-check-docs.yml  rolling-check-docs.yml
src/gz_ros2_control/doc/: index.rst
src/gz_ros2_control/gz_ros2_control/: CHANGELOG.rst  CMakeLists.txt  gz_hardware_plugins.xml  package.xml
src/gz_ros2_control/gz_ros2_control/include/gz_ros2_control/: gz_system.hpp
src/gz_ros2_control/gz_ros2_control/src/: gz_ros2_control_plugin.cpp  gz_system.cpp
src/gz_ros2_control/gz_ros2_control_demos/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/gz_ros2_control/gz_ros2_control_demos/config/: ackermann_drive_controller.yaml  cart_controller_ft_sensor.yaml  diff_drive_controller.yaml
src/gz_ros2_control/gz_ros2_control_demos/examples/: example_ackermann_drive.cpp  example_position.cpp
src/gz_ros2_control/gz_ros2_control_demos/launch/: cart_example_ft_sensor.launch.py
src/gz_ros2_control/gz_ros2_control_demos/urdf/: test_ackermann_drive.xacro.urdf  test_cart_effort.xacro.urdf  test_cart_ft_sensor.xacro.urdf  test_cart_position.xacro.urdf  test_cart_velocity.xacro.urdf  test_diff_drive.xacro.urdf  test_pendulum_effort.xacro.urdf  test_pendulum_position.xacro.urdf
src/gz_ros2_control/gz_ros2_control_demos/worlds/: empty_ft_sensor.sdf
src/gz_ros2_control/gz_ros2_control_tests/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/gz_ros2_control/gz_ros2_control_tests/tests/: CMakeLists.txt  effort_test.py  ft_sensor_test.py  position_test.py  velocity_test.py
src/ros2_control_cmake/: README.md  ros_controls.jazzy.repos  ros_controls.kilted.repos  ros_controls.rolling.repos
src/ros2_control_cmake/.github/workflows/: ci-pre-commit.yml  jazzy-build.yml  jazzy-downstream-build.yml  kilted-build.yml  kilted-downstream-build.yml  rolling-build.yml  rolling-downstream-build.yml
src/ros2_control_cmake/ros2_control_cmake/: CHANGELOG.rst  CMakeLists.txt  package.xml  ros2_control_cmake-extras.cmake
src/ros2_control_cmake/ros2_control_cmake/cmake/: ros2_control.cmake
src/ros2_kortex/kortex_bringup/: CMakeLists.txt
src/ros2_kortex/kortex_bringup/launch/: kortex_sim_control.launch.py
src/ros2_kortex/kortex_bringup/matlab/: record_joint_positions.m
src/ros2_kortex/kortex_bringup/scripts/: kinova_FK.py  kinova_FK_symbolic.py  pick_and_place_demo.py  test_home_position.py
src/ros2_kortex/kortex_bringup/worlds/: pick_and_place.sdf
src/ros2_kortex/kortex_description/grippers/gen3_lite_2f/urdf/: gen3_lite_2f_macro.xacro
src/ros2_kortex/kortex_description/robots/: gen3_lite.urdf
src/ros2_kortex/kortex_moveit_config/kinova_gen3_lite_moveit_config/config/: joint_limits.yaml  ros2_controllers.yaml
src/ros2_kortex/kortex_moveit_config/kinova_gen3_lite_moveit_config/launch/: clear_faults.py  sim.launch.py
src/serial/: CMakeLists.txt
tools/: echo_n_joint_states.py  generate_control_report.sh
